-Selecting Z88 cards: submenus for types and sizes
-Z88 footer: show when writing a card in slot 3, colors follow style
-Z88 device icons: different icons for slot 1,2,3, show when writing a card in slot 3, show when flap is open

Improved File selector: 
-Allow to have a full screen preview if window is big enough
-Better hotkeys explanation

Improved Debugging: 
-Added a setting to show on which scanline has been executed a Halt, inverting border color
-When enabling step mode, emulation is paused on all menus
-Preserve step mode when exiting debug cpu that was opened by a breakpoint
-When a breakpoint is fired, step mode is kept on all menus
-Breakpoints actions "call", "printc", "set-register" and "write" can now use expressions instead of fixed values
-Added breakpoint actions: "disassemble", "printregs"
-Warn on footer when step mode
-Enlarge width of breakpoints list

Improved SmartLoad & Drag-Drop: 
-Allow to load a .rom file as a custom rom file for the current machine
-Allow to Drag-Drop when menu open

Improved ZX Vision:
-Reorder windows when changing machine but only when ZEsarUX window is smaller than previous one
-Custom arrows characters
-Windows are now restored by default on starting ZEsarUX
-Better resize & reposition for new windows out of range

Improved ZX Desktop:
-Added configurable icons to the ZX Desktop: icons to windows, icons to actions, file links
-Right mouse button is now used for secondary actions. It no longer simulates ESC key (unless you enable it on ZX Vision Settings)
-Allow to extend ZX Desktop vertically
-Added frame around emulated machine
-Added setting to mix scr image with background
-Allow to set any tape/snapshot/disk that contains a spectrum screen (SCR) as background

Improved HiLow DataDrive emulation:
-Allow to Format, Browse and Chkdsk a Hilow DataDrive image (.ddh file)
-Allow to convert audio from a real Hilow DataDrive tape to an image file (.ddh)
-Added technical documentation on the extras package
